--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,8 +2,8 @@ FROM	debian:buster
 
 RUN		apt-get -y update && apt-get -y install nginx
 
-COPY	cert.pem /etc/ssl/cert.pem
-COPY	key.pem /etc/ssl/key.pem
+COPY	/tools/cert.pem /etc/ssl/cert.pem
+COPY	/tools/key.pem /etc/ssl/key.pem
 COPY	config.conf /etc/nginx/conf.d
 
 EXPOSE	443
