starting docker compose

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,8 @@
-DOMAIN_NAME=aelaoufi.42.fr
-# certificates
-CERTS_=.
-# MYSQL SETUP
-MYSQL_DATABASE="DB"
-MYSQL_ROOT_PASSWORD=
-MYSQL_USER=
-MYSQL_PASSWORD=
+- MYSQL_ROOT_PASSWORD="anassanass"
+- MYSQL_DATABASE="DB"
+- MYSQL_USER="aelaoufi"
+- MYSQL_PASSWORD="anass"
+- WORDPRESS_DB_HOST="aelaoufi.42.fr"
+- WORDPRESS_DB_NAME="WDB"
+- WORDPRESS_DB_PASSWORD="anassanass"
+- WORDPRESS_TABLE_PREFIX=""
