starting docker compose

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,8 +6,12 @@ services:
     build: ./requirements/nginx
     ports:
       - 443:443
+    volumes:
+      - wordpress:/var/www/html/wordpress
     env_file:
       - .env
+    depends_on:
+      - wordpress
 
 
   mariadb:
@@ -21,7 +25,10 @@ services:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-
+    networks:
+      - wordpress
+    volumes:
+      - mariadb:/var/lib/mysql/
 
   wordpress:
     build: ./requirements/wordpress
@@ -29,6 +36,8 @@ services:
       - 9000:9000
     env_file:
       - .env
+    volumes:
+      - wordpress:/var/www/html/wordpress
     environment:
       - MYSQL_ROOT_PASSWOR=${MYSQL_ROOT_PASSWORD}
       - MYSQL_DATABASE=${MYSQL_DATABASE}
@@ -38,10 +47,25 @@ services:
       - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME}
       - WORDPRESS_DB_PASSWORD=${WORDPRESS_DB_PASSWORD}
       - WORDPRESS_TABLE_PREFIX=${WORDPRESS_TABLE_PREFIX}
+    depends_on:
+      - mariadb
 
 
 networks:
+  wordpress:
+    driver: bridge
 
-
-volumes:
+volumes :
+  wordpress:
+    driver: local
+    driver_opts:
+      type: none
+      device: /Users/anass_elaoufi/Desktop/volumes/wordpress
+      o: bind 
+  mariadb:
+    driver: local
+    driver_opts:
+      type: none
+      device: /Users/anass_elaoufi/Desktop/volumes/mariadb
+      o: bind
 
