--- a/srcs/requirements/Wordpress/Dockerfile
+++ b/srcs/requirements/Wordpress/Dockerfile
@@ -9,7 +9,7 @@ RUN     mkdir -p /run/php/
 
 
 COPY    ./tools/Wp_script.sh /Wp_script.sh
-COPY ./tools/www.conf /etc/php/7.3/fpm/pool.d/
+#COPY ./tools/www.conf /etc/php/7.3/fpm/pool.d/
 
 RUN     chmod +x Wp_script.sh
 
