--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,7 +3,7 @@ FROM	debian:buster
 RUN 	apt-get update -y && apt-get upgrade -y
 RUN 	apt-get install -y mariadb-server
 
-COPY	./USERS_SETUP.sh ./USERS_SETUP.sh
+COPY	./tools/USERS_SETUP.sh ./USERS_SETUP.sh
 
 RUN		chmod +x USERS_SETUP.sh
 
