working on yml file, database problem :///

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,8 @@
--MYSQL_ROOT_PASSWORD="anassanass"
--MYSQL_DATABASE="DB"
--MYSQL_USER="aelaoufi"
--MYSQL_PASSWORD="anass"
--WORDPRESS_DB_HOST="aelaoufi.42.fr"
--WORDPRESS_DB_NAME="WDB"
--WORDPRESS_DB_PASSWORD="anassanass"
--WORDPRESS_TABLE_PREFIX=""
+MYSQL_ROOT_PASSWORD=anassanass
+MYSQL_DATABASE=DB
+MYSQL_USER=aelaoufi
+MYSQL_PASSWORD=anass
+WORDPRESS_DB_HOST=mariadb
+WORDPRESS_DB_NAME=mariadb
+WORDPRESS_DB_PASSWORD=anassanass
+WORDPRESS_TABLE_PREFIX=
