working, still need more testing

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,11 @@
+WP_USER=aelaoufi
+WP_PW=anassanass
+WP_EMAIL=aelaoufi@student.1337.ma
 MYSQL_ROOT_PASSWORD=anassanass
-MYSQL_DATABASE=DB
-MYSQL_USER=aelaoufi
-MYSQL_PASSWORD=anass
+MYSQL_DATABASE=mdb
+MYSQL_USER=USER
+MYSQL_PASSWORD=anassraja
 WORDPRESS_DB_HOST=mariadb
-WORDPRESS_DB_NAME=mariadb
-WORDPRESS_DB_PASSWORD=anassanass
-WORDPRESS_TABLE_PREFIX=
+WORDPRESS_DB_NAME=mdb
+WORDPRESS_DB_PASSWORD=anassraja
+WORDPRESS_TABLE_PREFIX=wp_
