--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,7 +4,7 @@ RUN 	apt-get update -y && apt-get upgrade -y
 RUN 	apt-get install -y mariadb-server
 
 COPY	./tools/USERS_SETUP.sh ./USERS_SETUP.sh
-COPY	./tools/conf.conf /etc/mysql/mariadb.conf.d/
+COPY	./tools/50-server.cnf /etc/mysql/mariadb.conf.d
 
 RUN		chmod +x USERS_SETUP.sh
 
