--- a/srcs/requirements/nginx/config.conf
+++ b/srcs/requirements/nginx/config.conf
@@ -1,9 +1,20 @@
 server
 {
-	listen 443;
-	#server_name localhost;
-
+	listen 443 ssl;
+	root /var/www/html/wordpress;
+	index index.php;
 	ssl_certificate /etc/ssl/cert.pem;
 	ssl_certificate_key /etc/ssl/key.pem;
 	ssl_protocols TLSv1.2 TLSv1.3;
+
+	location /
+	{
+		try_files $uri $uri/ =404; 
+	}
+
+	location ~ \.php$ 
+	{
+		include snippets/fastcgi-php.conf;
+		fastcgi_pass wordpress:9000;
+	}
 }
