--- a/srcs/requirements/Wordpress/Dockerfile
+++ b/srcs/requirements/Wordpress/Dockerfile
@@ -11,6 +11,7 @@ COPY    ./tools/Wp_script.sh /Wp_script.sh
 COPY    ./tools/www.conf /etc/php/7.3/fpm/pool.d/
 
 RUN     chmod +x Wp_script.sh
+RUN     sh Wp_script.sh
 RUN     mkdir -p /run/php/
 
 EXPOSE  9000
