--- a/srcs/.env
+++ b/srcs/.env
@@ -3,7 +3,7 @@ WP_PW=anassanass
 WP_EMAIL=aelaoufi@student.1337.ma
 MYSQL_ROOT_PASSWORD=anassanass
 MYSQL_DATABASE=mdb
-MYSQL_USER=USER
+MYSQL_USER=user
 MYSQL_PASSWORD=anassraja
 WORDPRESS_DB_HOST=mariadb
 WORDPRESS_DB_NAME=mdb
